# git_repository_learning_agent

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
docs/: README.md  architecture-and-flow.md  dependencies.md  how-to-run.md  hurdles-and-solutions.md  purpose.md  roadmap.md
github_learning_agent/: __init__.py  config.py  github_service.py  pipelines.py  schemas.py  ssl_setup.py  streamlit_app.py
