[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-learning-agent"
version = "0.1.0"
description = "Learn technologies from GitHub: discover repos with Gemini + LangChain, analyze, and Q&A."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31.0",
    "langchain>=0.3.14",
    "langchain-core>=0.3.14",
    "langchain-google-genai>=2.0.0",
    "httpx>=0.27.0",
    "certifi>=2024.0.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0"]

[tool.hatch.build.targets.wheel]
packages = ["github_learning_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
